[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/LaserGun.gd" type="Script" id=2]
[ext_resource path="res://Assets/sfx/launches/slimeball.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/models/extra_life.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Player/Weapons/gun.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.657, 0.697, 0.657 )

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.919402, 0 )

[node name="FirstPersonCamera" type="Camera" parent="Head"]
far = 35.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Audio_Hit" type="AudioStreamPlayer" parent="."]
volume_db = -6.058

[node name="AudioStreamPlayer_Generic" type="AudioStreamPlayer" parent="."]

[node name="MeshSpatial" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="MeshSpatial"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 1.05997, -0.674217, 0.141817 )
mesh = ExtResource( 4 )
material/0 = null

[node name="gun" parent="MeshSpatial" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00580037, 0.134136, -0.55949 )
visible = false
script = ExtResource( 2 )
default_position = Vector3( 0.288, -0.3, -0.2 )

[node name="ShotAudio" type="AudioStreamPlayer" parent="MeshSpatial/gun"]
stream = ExtResource( 3 )

[node name="ThirdPersonCamera" type="Camera" parent="."]
